ADD - correzione componenti dashboard

--- a/correzioni/html-css-bootstrap-dashboard/index.html
+++ b/correzioni/html-css-bootstrap-dashboard/index.html
@@ -26,6 +26,80 @@
 		<link rel="stylesheet" href="./css/app.css" />
 	</head>
 	<body>
+		<div
+			class="offcanvas offcanvas-end offcanvas-w-lg"
+			tabindex="-1"
+			id="offcanvasExample"
+			aria-labelledby="offcanvasExampleLabel"
+		>
+			<div class="offcanvas-header">
+				<h5 class="offcanvas-title" id="offcanvasExampleLabel">
+					Nuovo studente
+				</h5>
+				<button
+					type="button"
+					class="btn-close"
+					data-bs-dismiss="offcanvas"
+					aria-label="Close"
+				></button>
+			</div>
+			<div class="offcanvas-body">
+				<form class="row g-3">
+					<div class="col-md-6">
+						<label for="inputEmail4" class="form-label">Email</label>
+						<input type="email" class="form-control" id="inputEmail4" />
+					</div>
+					<div class="col-md-6">
+						<label for="inputPassword4" class="form-label">Password</label>
+						<input type="password" class="form-control" id="inputPassword4" />
+					</div>
+					<div class="col-12">
+						<label for="inputAddress" class="form-label">Address</label>
+						<input
+							type="text"
+							class="form-control"
+							id="inputAddress"
+							placeholder="1234 Main St"
+						/>
+					</div>
+					<div class="col-12">
+						<label for="inputAddress2" class="form-label">Address 2</label>
+						<input
+							type="text"
+							class="form-control"
+							id="inputAddress2"
+							placeholder="Apartment, studio, or floor"
+						/>
+					</div>
+					<div class="col-md-6">
+						<label for="inputCity" class="form-label">City</label>
+						<input type="text" class="form-control" id="inputCity" />
+					</div>
+					<div class="col-md-4">
+						<label for="inputState" class="form-label">State</label>
+						<select id="inputState" class="form-select">
+							<option selected>Choose...</option>
+							<option>...</option>
+						</select>
+					</div>
+					<div class="col-md-2">
+						<label for="inputZip" class="form-label">Zip</label>
+						<input type="text" class="form-control" id="inputZip" />
+					</div>
+					<div class="col-12">
+						<div class="form-check">
+							<input class="form-check-input" type="checkbox" id="gridCheck" />
+							<label class="form-check-label" for="gridCheck">
+								Check me out
+							</label>
+						</div>
+					</div>
+					<div class="col-12">
+						<button type="submit" class="btn btn-primary">Sign in</button>
+					</div>
+				</form>
+			</div>
+		</div>
 		<div class="app vh-100 overflow-hidden d-flex flex-column">
 			<aside class="top-bar">
 				<div class="container-fluid">
@@ -56,7 +130,9 @@
 							</div>
 						</div>
 						<div class="col-auto">
-							<ul class="toolbar d-flex gap-4 list-unstyled mb-0">
+							<ul
+								class="toolbar d-flex gap-4 list-unstyled mb-0 align-items-center"
+							>
 								<li class="toolbar__item d-none d-lg-block">
 									<i class="fa-solid fa-list-ul"></i>
 								</li>
@@ -67,14 +143,34 @@
 									<i class="fa-solid fa-ellipsis-vertical"></i>
 								</li>
 								<li class="toolbar__item notification unread">
-									<i class="fa-solid fa-bell"></i>
+									<div class="dropdown">
+										<span
+											class="dropdown-toggle notification unread"
+											type="button"
+											data-bs-toggle="dropdown"
+											aria-expanded="false"
+										>
+											<i class="fa-solid fa-bell"></i>
+										</span>
+										<ul class="dropdown-menu">
+											<li><a class="dropdown-item" href="#">Action</a></li>
+											<li>
+												<a class="dropdown-item" href="#">Another action</a>
+											</li>
+											<li>
+												<a class="dropdown-item" href="#"
+													>Something else here</a
+												>
+											</li>
+										</ul>
+									</div>
 								</li>
 							</ul>
 						</div>
 					</div>
 				</div>
 			</aside>
-			<div class="flex-grow-1 app__content-wrapper d-flex">
+			<div class="flex-grow-1 app__content-wrapper d-flex overflow-hidden">
 				<header
 					class="app__sidebar flex-shrink-0 d-flex flex-column align-items-center align-items-lg-stretch"
 				>
@@ -132,7 +228,7 @@
 						</ul>
 					</nav>
 				</header>
-				<main class="app__content flex-grow-1">
+				<main class="app__content flex-grow-1 overflow-auto">
 					<section class="bg-primary text-light py-3">
 						<div class="container-fluid">
 							<div class="row">
@@ -145,7 +241,12 @@
 								</div>
 								<div class="col-12 col-md-auto col-lg-3 col-xl-2">
 									Nuovo studente
-									<button class="btn btn-outline-light">
+									<button
+										class="btn btn-outline-light"
+										data-bs-toggle="offcanvas"
+										data-bs-target="#offcanvasExample"
+										aria-controls="offcanvasExample"
+									>
 										<i class="fa-regular fa-plus"></i>
 									</button>
 								</div>
@@ -159,10 +260,10 @@
 									<div class="card">
 										<div class="card-header">card title</div>
 										<div class="card-body">
-											<table class="table">
+											<table class="table table-sm">
 												<thead>
 													<tr>
-														<th scope="col">#</th>
+														<th scope="col" class="w-100">#</th>
 														<th scope="col">First</th>
 														<th scope="col">Last</th>
 														<th scope="col">Handle</th>
@@ -171,7 +272,7 @@
 												<tbody>
 													<tr>
 														<th scope="row">1</th>
-														<td>Mark</td>
+														<td>Mark john</td>
 														<td>Otto</td>
 														<td>@mdo</td>
 													</tr>
@@ -188,6 +289,60 @@
 													</tr>
 												</tbody>
 											</table>
+										</div>
+									</div>
+
+									<div class="card">
+										<div class="card-header">Gallery</div>
+
+										<div id="carouselExample" class="carousel slide">
+											<div class="carousel-inner">
+												<div class="carousel-item active">
+													<img
+														src="https://picsum.photos/id/1/600/400"
+														class="d-block w-100"
+														alt="..."
+													/>
+												</div>
+												<div class="carousel-item">
+													<img
+														src="https://picsum.photos/id/2/600/400"
+														class="d-block w-100"
+														alt="..."
+													/>
+												</div>
+												<div class="carousel-item">
+													<img
+														src="https://picsum.photos/id/3/600/400"
+														class="d-block w-100"
+														alt="..."
+													/>
+												</div>
+											</div>
+											<button
+												class="carousel-control-prev"
+												type="button"
+												data-bs-target="#carouselExample"
+												data-bs-slide="prev"
+											>
+												<span
+													class="carousel-control-prev-icon"
+													aria-hidden="true"
+												></span>
+												<span class="visually-hidden">Previous</span>
+											</button>
+											<button
+												class="carousel-control-next"
+												type="button"
+												data-bs-target="#carouselExample"
+												data-bs-slide="next"
+											>
+												<span
+													class="carousel-control-next-icon"
+													aria-hidden="true"
+												></span>
+												<span class="visually-hidden">Next</span>
+											</button>
 										</div>
 									</div>
 
