--- a/correzioni/js-array-carousel/index.html
+++ b/correzioni/js-array-carousel/index.html
@@ -12,6 +12,8 @@
 				<div class="carousel">
 					<div class="arrow arrow--top"></div>
 					<div class="arrow arrow--bottom"></div>
+
+					<div class="thumbs"></div>
 				</div>
 			</div>
 		</section>
