ADD - this, events, arrow function

--- a/js-griglia/index.html
+++ b/js-griglia/index.html
@@ -19,12 +19,12 @@
 			</div>
 		</section>
 
-		<section>
+		<!-- <section>
 			<div class="container">
 				<h1>titolo</h1>
 				<p>paragrafo</p>
 			</div>
-		</section>
+		</section> -->
 
 		<script src="./js/app.js"></script>
 	</body>
