ADD - correzione campo minato

--- a/js-griglia/index.html
+++ b/js-griglia/index.html
@@ -11,6 +11,8 @@
 			<div class="container">
 				<span> GRIGLIA </span>
 				<button id="play-btn">GIOCA</button>
+
+				<span id="score">0</span>
 			</div>
 		</header>
 		<section class="section">
